# shimaenaga_alpha

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  setup.py
examples/: 01_regression.py  02_classification.py  03_cross_validation.py  04_digits_attention.py  05_benchmark_vs_lightgbm.py  06_hastie_benchmark.py  07_hard_attention_benchmark.py  08_benchmark_full.py  09_regression_sample.py  10_tier3_real_benchmark.py  sbgbm.py
include/shimaenaga/: bin_mapper.h  booster.h  c_api.h  config.h  dataset.h  export.h  model.h  tree.h
python/: _shimaenaga.cpp
python/shimaenaga/: __init__.py  _ctypes_backend.py  sklearn_api.py
src/: c_api.cpp  config.cpp
src/attention/: attention_engine.cpp  attention_engine.h  layer_stack.cpp  layer_stack.h
src/boosting/: block_trainer.cpp  block_trainer.h  booster.cpp  line_search.cpp  line_search.h  refitter.cpp  refitter.h
src/data/: bin_mapper.cpp  bin_mapper.h  dataset.cpp  token_planner.cpp  token_planner.h
src/io/: serializer.cpp  serializer.h
src/objective/: binary.cpp  lambdarank.cpp  multiclass.cpp  objective.h  regression.cpp
src/tree/: tree.cpp  tree_learner.cpp  tree_learner.h
src/util/: aligned_alloc.h  log.h  random.h  simd.h
tests/: review_tests.cpp  smoke_test.cpp  t01_degenerate.cpp  t02_attention_norm.cpp  t03_tier3.cpp
tests/python/: conftest.py  test_accuracy.py  test_api_basic.py  test_errors.py  test_review_fixes.py  test_sklearn_clone.py  test_sklearn_ensemble.py  test_st_uat.py  test_tier3_api.py
